--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,20 @@
 @charset "utf-8";
 body {
-    font-family: "FUTURABOOK";
-    background: #fff;
-    margin: 0;
-    padding: 0;
-    color: #000;
+  font-family: "FUTURABOOK";
+  background: #fff;
+  margin: 0;
+  padding: 0;
+  color: #000;
 }
-
 
 /* ~~ Selectores de elemento/etiqueta ~~ */
 
 ul,
 ol,
 dl {
-    /* Debido a las diferencias existentes entre los navegadores, es recomendable no añadir relleno ni márgenes en las listas. Para lograr coherencia, puede especificar las cantidades deseadas aquí o en los elementos de lista (LI, DT, DD) que contienen. Recuerde que lo que haga aquí se aplicará en cascada en la lista .nav, a no ser que escriba un selector más específico. */
-    padding: 0;
-    margin: 0;
+  /* Debido a las diferencias existentes entre los navegadores, es recomendable no añadir relleno ni márgenes en las listas. Para lograr coherencia, puede especificar las cantidades deseadas aquí o en los elementos de lista (LI, DT, DD) que contienen. Recuerde que lo que haga aquí se aplicará en cascada en la lista .nav, a no ser que escriba un selector más específico. */
+  padding: 0;
+  margin: 0;
 }
 
 h1,
@@ -25,40 +24,37 @@ h4,
 h5,
 h6,
 p {
-    /* la eliminación del margen superior resuelve un problema que origina que los márgenes escapen de la etiqueta div contenedora. El margen inferior restante lo mantendrá separado de los elementos de que le sigan. */
-    padding-right: 3px;
-    padding-left: 3px;
-    /* la adición de relleno a los lados del elemento dentro de las divs, en lugar de en las divs propiamente dichas, elimina todas las matemáticas de modelo de cuadro. Una div anidada con relleno lateral también puede usarse como método alternativo. */
+  /* la eliminación del margen superior resuelve un problema que origina que los márgenes escapen de la etiqueta div contenedora. El margen inferior restante lo mantendrá separado de los elementos de que le sigan. */
+  padding-right: 3px;
+  padding-left: 3px;
+  /* la adición de relleno a los lados del elemento dentro de las divs, en lugar de en las divs propiamente dichas, elimina todas las matemáticas de modelo de cuadro. Una div anidada con relleno lateral también puede usarse como método alternativo. */
 }
-
 
 /* ~~ este contenedor rodea a todas las demás divs, lo que les asigna su anchura basada en porcentaje ~~ */
 
 .container {
-    width: 100%;
-    max-width: 1500px;
-    /* puede que sea conveniente una anchura máxima (max-width) para evitar que este diseño sea demasiado ancho en un monitor grande. Esto mantiene una longitud de línea más legible. IE6 no respeta esta declaración. */
-    min-width: 780px;
-    /* puede que sea conveniente una anchura mínima (min-width) para evitar que este diseño sea demasiado estrecho. Esto permite que la longitud de línea sea más legible en las columnas laterales. IE6 no respeta esta declaración. */
-    background: #FFF;
-    margin: 0 auto;
-    /* el valor automático de los lados, unido a la anchura, centra el diseño. No es necesario si establece la anchura de .container en el 100%. */
+  width: 100%;
+  max-width: 1500px;
+  /* puede que sea conveniente una anchura máxima (max-width) para evitar que este diseño sea demasiado ancho en un monitor grande. Esto mantiene una longitud de línea más legible. IE6 no respeta esta declaración. */
+  min-width: 780px;
+  /* puede que sea conveniente una anchura mínima (min-width) para evitar que este diseño sea demasiado estrecho. Esto permite que la longitud de línea sea más legible en las columnas laterales. IE6 no respeta esta declaración. */
+  background: #fff;
+  margin: 0 auto;
+  /* el valor automático de los lados, unido a la anchura, centra el diseño. No es necesario si establece la anchura de .container en el 100%. */
 }
-
 
 /* ~~ no se asigna una anchura al encabezado. Se extenderá por toda la anchura del diseño. Contiene un marcador de posición de imagen que debe sustituirse por su propio logotipo usuario ~~ */
 
 .header {
-    background: #6F7D94 url(../images/fond.jpg) repeat-x;
-    height: 110px;
+  background: #6f7d94 url(../images/fond.jpg) repeat-x;
+  height: 110px;
 }
 
 .logo {
-    background-image: url(../images/logo_plen.jpg);
-    width: 229px;
-    height: 100%;
+  background-image: url(../images/logo_plen.jpg);
+  width: 229px;
+  height: 100%;
 }
-
 
 /* ~~ Estas son las columnas para el diseño. ~~ 
 
@@ -73,175 +69,171 @@ p {
 */
 
 .sidebar1 {
-    float: left;
-    width: 20%;
-    background: #d5e17c;
-    padding-bottom: 10px;
-    height: 290px
+  float: left;
+  width: 20%;
+  background: #d5e17c;
+  padding-bottom: 10px;
+  height: 290px;
 }
 
 .content {
-    padding: 10px 0;
-    width: 80%;
-    float: left;
-    margin-bottom: 50px;
+  padding: 10px 0;
+  width: 80%;
+  float: left;
+  margin-bottom: 50px;
 }
-
 
 /* ~~ Este selector agrupado da espacio a las listas del área de .content ~~ */
 
 .content ul,
 .content ol {
-    padding: 0 15px 15px 40px;
-    /* este relleno reproduce en espejo el relleno derecho de la regla de encabezados y de párrafo incluida más arriba. El relleno se ha colocado en la parte inferior para que el espacio existente entre otros elementos de la lista y a la izquierda cree la sangría. Estos pueden ajustarse como se desee. */
+  padding: 0 15px 15px 40px;
+  /* este relleno reproduce en espejo el relleno derecho de la regla de encabezados y de párrafo incluida más arriba. El relleno se ha colocado en la parte inferior para que el espacio existente entre otros elementos de la lista y a la izquierda cree la sangría. Estos pueden ajustarse como se desee. */
 }
-
 
 /* ~~ Los estilos de lista de navegación (pueden eliminarse si opta por usar un menú desplegable predefinido como el de Spry) ~~ */
 
 ul.nav {
-    list-style: none;
-    /* esto elimina el marcador de lista */
-    border-top: 1px solid #666;
-    /* esto crea el borde superior de los vínculos (los demás se sitúan usando un borde inferior en el LI) */
-    margin-bottom: 15px;
-    /* esto crea el espacio entre la navegación en el contenido situado debajo */
+  list-style: none;
+  /* esto elimina el marcador de lista */
+  border-top: 1px solid #666;
+  /* esto crea el borde superior de los vínculos (los demás se sitúan usando un borde inferior en el LI) */
+  margin-bottom: 15px;
+  /* esto crea el espacio entre la navegación en el contenido situado debajo */
 }
 
 ul.nav li {
-    border-bottom: 1px solid #666;
-    /* esto crea la separación de los botones */
+  border-bottom: 1px solid #666;
+  /* esto crea la separación de los botones */
 }
 
 ul.nav a,
 ul.nav a:visited {
-    /* al agrupar estos selectores, se asegurará de que los vínculos mantengan el aspecto de botón incluso después de haber sido visitados */
-    padding: 5px 5px 5px 15px;
-    display: block;
-    /* esto asigna propiedades de bloque al vínculo, lo que provoca que llene todo el LI que lo contiene. Esto provoca que toda el área reaccione a un clic de ratón. */
-    text-decoration: none;
-    background: #8090AB;
-    color: #000;
+  /* al agrupar estos selectores, se asegurará de que los vínculos mantengan el aspecto de botón incluso después de haber sido visitados */
+  padding: 5px 5px 5px 15px;
+  display: block;
+  /* esto asigna propiedades de bloque al vínculo, lo que provoca que llene todo el LI que lo contiene. Esto provoca que toda el área reaccione a un clic de ratón. */
+  text-decoration: none;
+  background: #8090ab;
+  color: #000;
 }
 
 ul.nav a:hover,
 ul.nav a:active,
 ul.nav a:focus {
-    /* esto cambia el color de fondo y del texto tanto para usuarios que naveguen con ratón como para los que lo hagan con teclado */
-    background: #6F7D94;
-    color: #FFF;
+  /* esto cambia el color de fondo y del texto tanto para usuarios que naveguen con ratón como para los que lo hagan con teclado */
+  background: #6f7d94;
+  color: #fff;
 }
-
 
 /* ~~ El pie de página ~~ */
 
 .footer {
-    bottom: 0px;
-    margin: 0 auto;
-    width: 100%;
-    height: 25px;
-    background: #e3df7d;
-    position: fixed;
-    z-index: 400;
-    /* esta propiedad de borrado fuerza a .container a conocer dónde terminan las columnas y a contenerlas */
+  bottom: 0px;
+  margin: 0 auto;
+  width: 100%;
+  height: 25px;
+  background: #e3df7d;
+  position: fixed;
+  z-index: 400;
+  /* esta propiedad de borrado fuerza a .container a conocer dónde terminan las columnas y a contenerlas */
 }
-
 
 /* ~~ clases float/clear varias ~~ */
 
 .fltrt {
-    /* esta clase puede utilizarse para que un elemento flote en la parte derecha de la página. El elemento flotante debe preceder al elemento junto al que debe aparecer en la página. */
-    float: right;
-    margin-left: 8px;
+  /* esta clase puede utilizarse para que un elemento flote en la parte derecha de la página. El elemento flotante debe preceder al elemento junto al que debe aparecer en la página. */
+  float: right;
+  margin-left: 8px;
 }
 
 .fltlft {
-    /* esta clase puede utilizarse para que un elemento flote en la parte izquierda de la página. El elemento flotante debe preceder al elemento junto al que debe aparecer en la página. */
-    float: left;
-    margin-right: 8px;
+  /* esta clase puede utilizarse para que un elemento flote en la parte izquierda de la página. El elemento flotante debe preceder al elemento junto al que debe aparecer en la página. */
+  float: left;
+  margin-right: 8px;
 }
 
 .clearfloat {
-    /* esta clase puede situarse en una <br /> o div vacía como elemento final tras la última div flotante (dentro de #container) si #footer se elimina o se saca fuera de #container */
-    clear: both;
-    height: 0;
-    font-size: 1px;
-    line-height: 0px;
+  /* esta clase puede situarse en una <br /> o div vacía como elemento final tras la última div flotante (dentro de #container) si #footer se elimina o se saca fuera de #container */
+  clear: both;
+  height: 0;
+  font-size: 1px;
+  line-height: 0px;
 }
 
 #formLogin {
-    background-color: #E7E7E7;
-    border: 1px solid #3C8DBC;
-    line-height: 1;
-    margin: 6px 6px 20px;
-    padding: 10px;
+  background-color: #e7e7e7;
+  border: 1px solid #3c8dbc;
+  line-height: 1;
+  margin: 6px 6px 20px;
+  padding: 10px;
 }
 
 #formLogin button.login {
-    margin-bottom: 8px;
-    margin-top: 8px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 #formLogin div {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 #formLogin label {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .logininputb {
-    background-color: #F0F0F0;
-    margin-bottom: 8px;
-    margin-top: 8px;
-    border: 1px solid #B8B8B6;
-    color: #000000;
-    cursor: pointer;
-    height: 32px;
-    padding: 5px;
-    text-transform: uppercase;
-    vertical-align: middle;
-    width: 160px;
+  background-color: #f0f0f0;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  border: 1px solid #b8b8b6;
+  color: #000000;
+  cursor: pointer;
+  height: 32px;
+  padding: 5px;
+  text-transform: uppercase;
+  vertical-align: middle;
+  width: 160px;
 }
 
 .logininputb:hover {
-    color: #fff;
-    background-color: #F3AB63;
-    border: 1px solid #C2E1EF;
-    cursor: pointer;
-    padding: 5px;
+  color: #fff;
+  background-color: #f3ab63;
+  border: 1px solid #c2e1ef;
+  cursor: pointer;
+  padding: 5px;
 }
 
 select,
 textarea,
 input {
-    background-color: #fff;
-    border: 1px solid #b8b8b6;
-    font-family: "FUTURABOOK";
-    color: #333;
-    cursor: pointer;
-    padding-left: 3px;
-    width: 100%;
+  background-color: #fff;
+  border: 1px solid #b8b8b6;
+  font-family: "FUTURABOOK";
+  color: #333;
+  cursor: pointer;
+  padding-left: 3px;
+  width: 100%;
 }
 
 #formInscription select,
 #formUpdate select {
-    width: 61%;
+  width: 61%;
 }
 
 input[type="text"],
 textarea {
-    width: 60%;
+  width: 60%;
 }
 
 input[type="text"],
 input[type="password"] {
-    height: 20px;
-    color: #555555;
+  height: 20px;
+  color: #555555;
 }
 
 input[type="checkbox"] {
-    width: auto;
+  width: auto;
 }
 
 select:hover,
@@ -250,155 +242,156 @@ textarea:hover,
 textarea:focus,
 input:hover,
 input:focus {
-    background-color: none;
-    color: #333;
-    border: 1px solid #3C8DBC;
-    cursor: pointer;
+  background-color: none;
+  color: #333;
+  border: 1px solid #3c8dbc;
+  cursor: pointer;
 }
 
 button {
-    color: #000;
-    border: 1px solid #b8b8b6;
-    width: 160px;
-    cursor: pointer;
-    height: 32px;
-    padding: 5px;
-    vertical-align: middle;
-    text-transform: uppercase;
+  color: #000;
+  border: 1px solid #b8b8b6;
+  width: 160px;
+  cursor: pointer;
+  height: 32px;
+  padding: 5px;
+  vertical-align: middle;
+  text-transform: uppercase;
 }
 
 .bottom-link {
-    color: #fff;
-    background-color: #EC821E;
-    border: 1px solid #b8b8b6;
-    cursor: pointer;
-    height: 20px;
-    padding: 5px;
-    vertical-align: middle;
-    text-transform: uppercase;
-    font-weight: bold;
+  color: #fff;
+  background-color: #ec821e;
+  border: 1px solid #b8b8b6;
+  cursor: pointer;
+  height: 20px;
+  padding: 5px;
+  vertical-align: middle;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .bottom-link:hover,
 button:hover {
-    color: #fff;
-    background-color: #F3AB63;
-    border: 1px solid #C2E1EF;
-    cursor: pointer;
-    padding: 5px;
+  color: #fff;
+  background-color: #f3ab63;
+  border: 1px solid #c2e1ef;
+  cursor: pointer;
+  padding: 5px;
 }
 
 .bottom-link:active {
-    border: 1px solid #B8B8B6;
+  border: 1px solid #b8b8b6;
 }
 
 .bottom-link:link {
-    border-style: solid;
-    text-decoration: none;
-    border: 1px solid #B8B8B6;
+  border-style: solid;
+  text-decoration: none;
+  border: 1px solid #b8b8b6;
 }
 
 .menulist {
-    list-style-type: none;
-    margin: 0;
+  list-style-type: none;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:link,
 a:visited,
 a:active {
-    color: #424242;
+  color: #7455fd;
 }
 
 a:hover {
-    color: #ec690f;
+  color: #5d38ff;
 }
 
 .PageBackgroundGradient {
-    background-image: url('../images/Page-BgGradient.jpg');
-    background-repeat: repeat-x;
-    height: 900px;
+  background-image: url("../images/Page-BgGradient.jpg");
+  background-repeat: repeat-x;
+  height: 900px;
 }
 
 .ingreso {
-    font-family: "Berlin Sans FB";
-    -webkit-box-shadow: 2px 2px 5px #999;
-    -moz-box-shadow: 2px 2px 5px #999;
+  font-family: "Berlin Sans FB";
+  -webkit-box-shadow: 2px 2px 5px #999;
+  -moz-box-shadow: 2px 2px 5px #999;
 }
 
 .header1 {
-    background: -moz-linear-gradient(center top, #FFFFFF, #F2F2F2) repeat scroll 0 0 transparent;
-    border-bottom: 1px solid #FFFFFF;
-    border-top: 5px solid #656565;
-    color: #EC690F;
-    font-size: 20px;
-    padding-left: 5px;
+  background: -moz-linear-gradient(center top, #ffffff, #f2f2f2) repeat scroll 0
+    0 transparent;
+  border-bottom: 1px solid #ffffff;
+  border-top: 5px solid #656565;
+  color: #ec690f;
+  font-size: 20px;
+  padding-left: 5px;
 }
 
 .headerinner {
-    height: 28px;
-    margin: auto;
-    overflow: hidden;
-    width: 960px;
+  height: 28px;
+  margin: auto;
+  overflow: hidden;
+  width: 960px;
 }
 
 .colorleyend {
-    position: relative;
-    border-color: #cccccc;
-    border-width: 1px;
-    width: 80%;
-    font-family: "FUTURABOOK";
-    margin-bottom: 20px;
-    margin-top: 10px;
-    padding-top: 20px;
-    margin-left: 10px;
-    text-align: left;
-    margin-right: 0px;
-    padding-right: 20px;
+  position: relative;
+  border-color: #f3f3fe;
+  border-width: 1px;
+  width: 80%;
+  font-family: "FUTURABOOK";
+  margin-bottom: 20px;
+  margin-top: 10px;
+  padding-top: 20px;
+  margin-left: 10px;
+  text-align: left;
+  margin-right: 0px;
+  padding-right: 20px;
 }
 
 .colorleyendinto {
-    padding: 0;
-    font-size: 19px;
-    color: #333333;
-    font-weight: bold;
+  padding: 0;
+  font-size: 19px;
+  color: #333333;
+  font-weight: bold;
 }
 
 .estilotabtitulo {
-    margin-top: 30px
+  margin-top: 30px;
 }
 
 .form-group {
-    margin-bottom: 2px;
+  margin-bottom: 2px;
 }
 
 .form-group label {
-    display: inline-block;
-    float: left;
-    font-size: 12px;
-    font-weight: 700;
-    margin-top: 5px;
-    max-width: 100%;
-    text-align: right;
-    vertical-align: middle;
-    width: 20%;
-    padding-right: 10px;
+  display: inline-block;
+  float: left;
+  font-size: 12px;
+  font-weight: 700;
+  margin-top: 5px;
+  max-width: 100%;
+  text-align: right;
+  vertical-align: middle;
+  width: 20%;
+  padding-right: 10px;
 }
 
 .form-group div {
-    display: inline;
+  display: inline;
 }
 
 .mitadboton {
-    float: left;
-    margin: 0 10px;
-    padding-left: 40px;
-    width: 30%;
+  float: left;
+  margin: 0 10px;
+  padding-left: 40px;
+  width: 30%;
 }
 
 .mitadboton:nth-child(1) {
-    padding-left: 0;
+  padding-left: 0;
 }
