--- a/css/demo_page.css
+++ b/css/demo_page.css
@@ -1,7 +1,7 @@
 h1,
 p {
   color: #666 !important;
-  font-family: "FUTURABOOK";
+  font-family: 'FUTURABOOK';
   font-weight: 100;
   font-size: medium;
 }
