--- a/css/daltonismcss/gameview.css
+++ b/css/daltonismcss/gameview.css
@@ -2,6 +2,6 @@
   background-image: url('images/gamebackground.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  height: 600px;
+  height: 100%;
   background-size: 100% 100%;
 }
