--- a/css/daltonismcss/gameview.css
+++ b/css/daltonismcss/gameview.css
@@ -2,6 +2,201 @@
   background-image: url('images/gamebackground.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%;
+  height: 656px;
   background-size: 100% 100%;
+  margin-top: -1%;
+  margin-left: -1%;
+  margin-right: -1%;
+  margin-bottom: 0%;
+ 
+}
+#monkey {
+  background-image: url('images/monkey.png');
+  background-repeat: no-repeat;
+  height: 30%;
+  width: 10%;
+  left: 30%;
+  top: -1%;
+  position: relative;
+  background-size: 100% 100%;
+
+}
+#exampleImage {
+  height: 25%;
+  width: 15%;
+  color: white;
+  opacity: 90%;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  position: absolute;
+  left: 45%;
+  top: 1%;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Normal/Tucan.png');
+
+}
+#deunapiaButton {
+  height: 25%;
+  width: 15%;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 6%;
+  outline: none;
+  top: 35%;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Deutaronapia/Tucan.png');
+
+}
+#deunapiaButton:hover{
+  cursor:  help;
+}
+#protnapiaButton {
+  height: 25%;
+  width: 15%;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 6%;
+  top: 70%;
+  outline: none;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Protanopia/Tucan.png');
+
+}
+#tritanopiaButton {
+  height: 25%;
+  width: 15%;
+  color: white;
+  outline: none;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 28%;
+  top: 50%;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Tritanopia/Tucan.png');
+
+}
+#deumaliaButton {
+  height: 25%;
+  width: 15%;
+  outline: none;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 50%;
+  top: 35%;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Deutanomalia/Tucan.png');
+
+}
+#tritanomaliaButton {
+  height: 25%;
+  width: 15%;
+  outline: none;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 50%;
+  top: 70%;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Tritanomalia/Tucan.png');
+
+}
+#protanomaliaButton {
+  height: 25%;
+  width: 15%;
+  outline: none;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 80%;
+  top: 35%;
+  border: none;
+  position: absolute;
+  background-size: 100% 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-image: url('images/Protanomalia/Tucan.png');
+
+}
+#normalButton {
+  height: 25%;
+  outline: none;
+  width: 15%;
+  color: white;
+  border-radius: 100%;
+  background-color: white;
+  border-style: solid;
+  left: 80%;
+  top: 70%;
+  border: none;
+  position: absolute;
+
+}
+
+#elijeEste {
+  background-image: url('images/elijeEste.gif');
+  background-repeat: no-repeat;
+  height: 10%;
+  width: 12%;
+  left: 58%;
+  transform: rotate(60deg);
+  top: 8%;
+  position: absolute;
+  background-size: 100% 100%;
+
+}
+#level {
+  background-image: url('images/levels/Nivel1.gif');
+  background-repeat: no-repeat;
+  height: 10%;
+  width: 15%;
+  left: 1%;
+  top: 0;
+  position: absolute;
+  background-size: 100% 100%;
+
+}
+
+#endgamebackground {
+  background-image: url('images/endgamebackground.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 656px;
+  background-size: 100% 100%;
+  margin-top: -1%;
+  margin-left: -1%;
+  margin-right: -1%;
+  margin-bottom: 0%;
+ 
 }
