--- a/css/dyscaulculiaCss/discalculia.css
+++ b/css/dyscaulculiaCss/discalculia.css
@@ -1,88 +1,95 @@
 #background{
-    background-image: url("images/background.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 95% 100%;
-    margin-top: 2%;
+  background-image: url("images/background.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 95% 100%;
+  margin-top: 2%;
 }
 
-h1 {
-    font-family: cursive;
-    text-align: center;  
-  }
+a.disable-links {
+  pointer-events: none;
+  opacity: 0.4;
+}
 
-  #statement{
-    margin-bottom: 5%;
-  }
+h1, h2 {
+  font-family: cursive;
+  text-align: center;  
+}
 
- #operation{
-    margin-top: 5%;
-    text-align: center;
+#statement{
+  margin-bottom: 5%;
+}
+
+#operation{
+  text-align: center;
 }
 
 #entry{
-  margin-top: 6%;
-  width: 20%;
-  margin-left: 39%;
-  margin-bottom: 1%;
+margin-top: 6%;
+width: 20%;
+margin-left: 39%;
+margin-bottom: 1%;
 }
 
 #entry2{
-  width: 20%;
-  margin-left: 39%;
+width: 20%;
+margin-left: 39%;
 }
 
 #iconTime{
-    position: absolute;
-    top:9%;
-    right: 15%;
-    text-align: right;
-    width: 6%; 
-    height: 10%;
-  }
+  position: absolute;
+  top:12%;
+  right: 15%;
+  text-align: right;
+  width: 6%; 
+  height: 10%;
+}
 
 #item{
-  position: absolute;
-  margin-bottom: 10%;
+position: absolute;
+margin-bottom: 10%;
 }
 
 h4{
-  font-size: xx-small;
-  text-align: center;
+font-size: xx-small;
+font-family: cursive;
 }
 
-  
+
 #buttons, #finish{
-    text-align: center;
+  text-align: center;
 }
 
 #reply{
-  margin-top: 5%;
-  text-align: center;
+margin-top: 5%;
+text-align: center;
 }
 
-  #answer1, #answer3 {
-    width: 10%;
-    color:white;
-    font-size: medium;
-    font-weight: bold;
-    margin-right: 4%;
-    min-width: 130px;
+#answer1, #answer3 {
+  width: 10%;
+  color:white;
+  font-size: medium;
+  font-weight: bold;
+  margin-right: 4%;
+  min-width: 130px;
 }
 
 #answer2, #answer4 {
-    width: 10%;
-    color:white;
-    font-size: medium;
-    font-weight: bold;
-    min-width: 130px;
+  width: 10%;
+  color:white;
+  font-size: medium;
+  font-weight: bold;
+  min-width: 130px;
 }
- #row1, #row2{
-    margin-top: 2%;
+#row1, #row2{
+  margin-top: 2%;
 }
 
 #continue{
-    margin-top: 3%;
-    margin-bottom: 7%;
+  margin-top: 3%;
+  margin-bottom: 7%;
 }
+
+
+
 
