--- a/css/dyscaulculiaCss/discalculia.css
+++ b/css/dyscaulculiaCss/discalculia.css
@@ -1,4 +1,4 @@
-#background{
+#background {
   background-image: url("images/background.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -13,61 +13,66 @@ a.disable-links {
 
 h1, h2 {
   font-family: cursive;
-  text-align: center;  
+  text-align: center;
 }
 
-#statement{
+#statement {
   margin-bottom: 5%;
 }
 
-#operation{
+#operation {
   text-align: center;
 }
 
-#entry{
-margin-top: 6%;
-width: 20%;
-margin-left: 39%;
-margin-bottom: 1%;
+#entry {
+  margin-top: 6%;
+  width: 20%;
+  margin-left: 39%;
+  margin-bottom: 1%;
 }
 
-#entry2{
-width: 20%;
-margin-left: 39%;
+#entry2 {
+  width: 20%;
+  margin-left: 39%;
 }
 
-#iconTime{
+#iconTime {
   position: absolute;
-  top:12%;
+  top: 12%;
   right: 15%;
   text-align: right;
-  width: 6%; 
+  width: 6%;
   height: 10%;
 }
 
-#item{
-position: absolute;
-margin-bottom: 10%;
+#item {
+  position: absolute;
+  margin-bottom: 10%;
 }
 
-h4{
-font-size: xx-small;
-font-family: cursive;
+h4 {
+  font-size: xx-small;
+  font-family: cursive;
 }
 
-
-#buttons, #finish{
+#buttons, #finish {
   text-align: center;
 }
 
-#reply{
-margin-top: 5%;
-text-align: center;
+#reply {
+  margin-top: 5%;
+  text-align: center;
+}
+
+#information {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  pointer-events: none;
 }
 
 #answer1, #answer3 {
   width: 10%;
-  color:white;
+  color: white;
   font-size: medium;
   font-weight: bold;
   margin-right: 4%;
@@ -76,20 +81,42 @@ text-align: center;
 
 #answer2, #answer4 {
   width: 10%;
-  color:white;
+  color: white;
   font-size: medium;
   font-weight: bold;
   min-width: 130px;
 }
-#row1, #row2{
+
+#row1, #row2 {
   margin-top: 2%;
 }
 
-#continue{
+#continue {
   margin-top: 3%;
   margin-bottom: 7%;
 }
 
+canvas {
+  background-color: #FFFFFF;
+  border: 2px solid #579AD3;
+  border-radius: 0 0 8px 8px;
+  margin-top: -0.3%;
+}
 
+#space {
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+#brush_size {
+  display: none;
+}
 
+#buttonG {
+  width: 10%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -6%;
+}
