--- a/css/dyscaulculiaCss/discalculia.css
+++ b/css/dyscaulculiaCss/discalculia.css
@@ -20,6 +20,10 @@ h1, h2 {
   margin-bottom: 5%;
 }
 
+input {
+  font-size: 25px !important;
+}
+
 #operation {
   text-align: center;
 }
@@ -29,6 +33,10 @@ h1, h2 {
   width: 20%;
   margin-left: 39%;
   margin-bottom: 1%;
+}
+
+#audio {
+  outline: none;
 }
 
 #entry2 {
@@ -94,6 +102,11 @@ h4 {
 #continue {
   margin-top: 3%;
   margin-bottom: 7%;
+  font-size: 25px;
+}
+
+.span-no-click {
+  pointer-events: none;
 }
 
 canvas {
